# my_local_mac_ai_experimental_playground_no_guarantees_final_v4_final_final

boring-llm-rag/: 01_infrastructure_setup.md  03_jupyter_markdown_chat.md  04_llm_sandbox_execution.md  Makefile  first_tries.ipynb  pyproject.toml
boring-llm-rag/compose/: docker-compose.weaviate.yml
boring-llm-rag/scripts/: jupyter_chat_md.py
local-llm-rag/: 02_rag_indexing_service.md  03_jupyter_markdown_chat.md  04_llm_sandbox_execution.md  Makefile  README.md  pyproject.toml
local-llm-rag-broken/: 01_infrastructure_setup.md  03_jupyter_hivemind.md  pyproject.toml
local-llm-rag-broken/compose/: docker-compose.yml
local-llm-rag-broken/hivemind/: __init__.py
local-llm-rag-broken/hivemind/resources/: codex.py  lab.py
local-llm-rag-broken/tools/: brainscan.py  ingest.py
local-llm-rag/compose/sandbox/: Dockerfile  requirements.txt
local-llm-rag/hivemind/: session.py
local-llm-rag/hivemind/resources/: __init__.py
local-llm-rag/scripts/: chat_store.py  jupyter_chat_md.py
local_llm_rag/: 01_infrastructure_setup.md
local_llm_rag/scripts/: ingest.py  rag_query.py  utils_ipynb_nb.py
